# xinlink-old

./: CMakeLists.txt  README.md  xinlink.pro
.github/workflows/: cmake-single-platform.yml
esp32/: platformio.ini
esp32/include/: core.h  instruction.h  network.h  type.h
esp32/src/: core.cpp  event.cpp  instruction.cpp  main.cpp  network.cpp
include/: core.h  device.h  event.h  instruction.h  link.h  ll.h  network.h  signal.h  type.h  xinlink.h
src/: command.c  command.c.autosave  core.c  device.c  event.c  instruction.c  link.c  ll.c  main(mouse controlB).c  main(mouse example A).c  main.c  network.c  signal.c  xinlink.c
xinlink/: CMakeLists.txt  core.c  device.c  event.c  instruction.c  main.c  network.c
xinlink/include/: command.h  core.h  event.h  instruction.h  network.h  type.h
xinlink_ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
xinlink_ui/core/include/: core.h  event.h  instruction.h  ll.h  network.h  type.h
xinlink_ui/core/src/: core.cpp  event.cpp  instruction.cpp  ll.cpp  main.cpp  network.cpp
xinlink_ui/dsp/: dsp.cpp  dsp.h
xinlink_ui/dsp/curls/: curls.cpp  curls.h
xinlink_ui/dsp/vnc/: vnc.cpp  vnc.h
